--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "run": "nodemon dist/server.js"
+    "run": "tsc-watch --onSuccess \"nodemon dist/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +28,7 @@
     "@typescript-eslint/parser": "^4.31.1",
     "eslint": "^7.32.0",
     "ts-node": "^10.2.1",
+    "tsc-watch": "^4.5.0",
     "tslint": "^6.1.3",
     "typescript": "^4.4.3",
     "uninstall": "0.0.0"
