--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "run": "tsc-watch --onSuccess \"nodemon dist/server.js"
+    "start": "ts-node --files src/server.ts",
+    "dev": "nodemon -x ts-node src/server.ts"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.1",
     "@types/cookie-session": "^2.0.43",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.9.3",
