--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.ts",
   "scripts": {
     "start": "ts-node --files src/server.ts",
-    "dev": "nodemon -x ts-node src/server.ts"
+    "dev": "nodemon -x ts-node --files src/server.ts"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.6",
-    "query-string": "^7.0.1"
+    "query-string": "^7.0.1",
+    "ts-node": "^10.2.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.1",
