--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "start": "ts-node --files src/server.ts",
+    "start": "pm2 start dist/server.js",
+    "postinstall": "tsc",
     "dev": "nodemon -x ts-node --files src/server.ts"
   },
   "author": "",
@@ -17,6 +18,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.6",
+    "pm2": "^5.1.2",
     "query-string": "^7.0.1",
     "ts-node": "^10.2.1",
     "tslib": "^2.3.1",
