--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "pm2 dist/src/server.js --name server",
     "postinstall": "tsc",
     "watch-node": "nodemon dist/server.js",
     "watch-ts": "tsc -w",
     "deploy": "git add . && git commit -m Heroku && git push heroku master"
-},
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -21,10 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.6",
     "pm2": "^5.1.2",
-    "query-string": "^7.0.1",
-    "ts-node": "^10.2.1",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "query-string": "^7.0.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.1",
