Added algorithm to generate unique short Ids

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "name": "nodemon",
-            "program": "${workspaceFolder}/dist/server.js",
+            "program": "${workspaceFolder}/dist/src/server.js",
             "request": "launch",
             "restart": true,
             "runtimeExecutable": "nodemon",
